# boiarchuk-neutrophil-dic-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
analyses/: README.md  _fig_style.py
analyses/01_w_split_profile/: FINDINGS.md  README.md  seed_check.py  sweep.py  visualize.py
analyses/02_cx_bound/: FINDINGS.md  README.md  seed_check.py  seed_check_extra.py  sweep.py  visualize.py
analyses/03_separate_g2_fit/: FINDINGS.md  README.md  fit.py
analyses/04_survivor_weighting/: FINDINGS.md  README.md  fit.py
analyses/05_v13_baseline/: FINDINGS.md  README.md  fib_decomposition.py  fit.py  make_fig1.py  seed_check.py
analyses/06_v13_cx_diagnostic/: FINDINGS.md  README.md  seed_check.py  sweep.py
analyses/07_groupspec_cx/: FINDINGS.md  README.md  fit.py
analyses/08_groupspec_cf/: FINDINGS.md  README.md  fit.py
analyses/09_profile_likelihood/: FINDINGS.md  (+4 more)
docs/: model_spec.md  parameter_glossary.md  reproduction_protocol.md
manuscript/: README.md  draft.md  draft_v1.md
notes/: known_issues.md
src/: __init__.py  cli.py  config.py  cost_v13.py  cost_v13_groupspec.py  data.py  ensemble.py  fit.py  fit_runner.py  model.py  profile_likelihood.py
supplementary/: README.md  S10_joint_architecture.md  S1_ode_formulation.md  S2_parameter_estimation.md  S3_profile_likelihood.md  S4_bootstrap_diagnostics.md  S5_intervention_timing.md  S6_phase_diagrams.md  S7_reproducibility.md  S8_mechanism_split_prior.md  S9_xiii_bound.md
tests/: conftest.py  test_cost_v13.py  test_data_integrity.py  test_invariants.py  test_reproducibility.py  test_smoke.py
(+515 files in other folders)
