[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boiarchuk-neutrophil-dic-model"
version = "0.1.0+phase0"
description = "Mechanistic ODE model of neutrophil-driven DIC pathogenesis (Boiarchuk 1998-2023 dataset)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0 AND CC-BY-4.0" }
authors = [
    { name = "Olena D. Boiarchuk" },
    { name = "Oleksiy Onasenko" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
analysis = [
    "SALib>=1.5",
    "emcee>=3.1",
    "corner>=2.2",
    "arviz>=0.17",
    "tqdm>=4.66",
]


[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take more than 10 seconds (run with: pytest -m slow)",
]
addopts = "-v --strict-markers"
